bug 355399: unclean shutdown while safe browsing initializes (makes zombies) patch: don't wait for thread after it's shutdown r=darin,a181=mconnor