mozilla/toolkit/components/url-classifier/src/nsUrlClassifierDBService.h
@@ -79,7 +79,7 @@ private:
   nsUrlClassifierDBService(nsUrlClassifierDBService&);
 
   // Make sure the event queue is intialized before we use it.
-  void EnsureThreadStarted();
+  nsresult EnsureThreadStarted();
   
   // Close db connection and join the background thread if it exists. 
   nsresult Shutdown();
